Now usnig bootstrap, adding container now

--- a/index.html
+++ b/index.html
@@ -2,13 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 		<link rel="stylesheet" type="text/css" href="index.css" />
-		<title>Vehicle Reporter</title>
-	</head>
-	<body>
-		<div class="header">
+        <title>Vehicle Reporter</title>
+        <div class="header">
 			<p class="logo-text">Vehicle<span class="logo-bold">Reporter</span></p>
 		</div>
+	</head>
+	<body>
+
+		<div class="hero">
+			<h1 class="hero-title">Vehicle History & Title Report</h1>
+            <p class="hero-subtitle">Get comprehensive report about a vehicle you own or plan to buy.</p></p>
+            <button class="hero-button btn btn-outline-light">View Sample Report</button>
+        </div>
+        <div class="container">
+
+        </div>
 	</body>
+
+	<footer class="footer">
+		<p class="footer-left">Copyright © 2020 vehiclereporter.com</p>
+		<p class="footer-right">support@vehiclereporter.com</p>
+	</footer>
 </html>
