added necessaey html for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -8,23 +8,93 @@
 		<link rel="stylesheet" type="text/css" href="index.css" />
         <title>Vehicle Reporter</title>
         <div class="header">
-			<p class="logo-text">Vehicle<span class="logo-bold">Reporter</span></p>
+            <p class="logo-text">Vehicle<span class="logo-bold">Reporter</span></p>
+            <button class="hero-button btn btn-outline-light mobile-button">View Sample Report</button>
 		</div>
 	</head>
 	<body>
-
+        <div class="body-container">
 		<div class="hero">
 			<h1 class="hero-title">Vehicle History & Title Report</h1>
             <p class="hero-subtitle">Get comprehensive report about a vehicle you own or plan to buy.</p></p>
             <button class="hero-button btn btn-outline-light">View Sample Report</button>
         </div>
         <div class="container">
+            <h1 class="container-title">Get Your Report Today</h1>
+            <h1 class="mobile-container-title dark-1">Vehicle History & Title Report</h1>
+            <input type="text" class="form-control" placeholder="Enter VIN Number" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <p class="container-input-hint">How to find my VIN Number?</p>
+            <div>
+                <button type="button" class="container-btn btn btn-primary">Check VIN</button>
+                <button type="button" class="container-btn btn btn-outline-primary">Get Previous Purchased Report</button>
+            </div>
+            <h2 class="container-secondary-title">Why VehicleReporter offers more value than Carfax®</h2>
+            <table>
+                <tr>
+                <th class="dark-1">Vehicle Data Feature</th>
+                <th class="right dark-1 small-text table-title">Vehicle<span class="heavy-bold">Reporter</span></th>
+                <th class="right dark-1 small-text table-title">CarFax</th>
+                <th class="right dark-1 small-text table-title">NMVTIS</th>
+            </tr>
+            <tr>
+                <td><span class="medium-bold dark-1">Instant Report:</span> Get your report instantly! No waiting around</td>
+                <td class="center"><img src="./assets/icon-check 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
 
+              </tr>
+              <tr>
+                <td><span class="medium-bold dark-1">Accurate Data:</span> Using government and third party databases</td>
+                <td class="center"><img src="./assets/icon-check 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+
+              </tr>
+              <tr>
+                <td><span class="medium-bold dark-1">Access to</span> title and registration data from ALL 50 states</td>
+                <td class="center"><img src="./assets/icon-check 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-check-mute 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+
+              </tr>
+              <tr>
+                <td><span class="medium-bold dark-1">Exclusive auction-announced</span> data from the two largest US auctions</td>
+                <td class="center"><img src="./assets/icon-check 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+
+              </tr>
+              <tr>
+                <td><span class="medium-bol dark-1">Collision records</span> from police reports and other accident data sources</td>
+                <td class="center"><img src="./assets/icon-check 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-check-mute 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+
+              </tr>
+              <tr>
+                <td><span class="medium-bold dark-1">Event data</span> reported from insurance carriers and salvage yards</td>
+                <td class="center"><img src="./assets/icon-check 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-check-mute 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-check-mute 16x16.png" class="icon"></td>
+
+              </tr>
+              <tr>
+                <td><span class="medium-bold dark-1">Savings:</span> The competitors charge $39.99 for a single report!</td>
+                <td class="center"><img src="./assets/icon-check 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+                <td class="right"><img src="./assets/icon-close-mute 16x16.png" class="icon"></td>
+
+              </tr>
+            </table>
         </div>
-	</body>
-
-	<footer class="footer">
+    </div>
+    <img class="chat-bot" src="./assets/chat-bot.png" alt="Chat Bot" />
+    <footer class="footer">
 		<p class="footer-left">Copyright © 2020 vehiclereporter.com</p>
-		<p class="footer-right">support@vehiclereporter.com</p>
-	</footer>
+		<p class="footer-right"><img src="assets/icon-mail16x16.png" class="mail" />  support@vehiclereporter.com</p>
+    </footer>
+    </body>
+
+
+	
 </html>
