started to add payment container

--- a/payment.html
+++ b/payment.html
@@ -19,15 +19,18 @@
 	<body>
 		<div class="outer">
 			<div class="container">
-				<h1 class="container-title">Gathering Information on Your Vehicle</h1>
-				<h2 class="container-subtitle">This process may take a few seconds, hang in there!</h2>
+				<h1 class="container-title">72 Historical Records</h1>
+				<h2 class="container-subtitle">2007 Ford F250 Super Duty King Ranch / Lariat / XL / XLT</h2>
+				<div class="container-info">
+					<p>VIN: 1FTSW20P27EB48115</p>
+					<p>Style / Body: Crew Cab 4D | Engine: 6.0L V8 FI</p>
+					<p>Country of Assembly: United States</p>
+				</div>
 				<table>
 					<tr>
 						<th class="table-title">Accident History</th>
 						<td class="center">
-							<div class="spinner-border spinner-border-sm text-primary float-right" role="status">
-								<span class="sr-only">Loading...</span>
-							</div>
+							<img src="assets/icon-check 16x16.png" class="check" />
 						</td>
 					</tr>
 					<tr>
@@ -35,9 +38,7 @@
 							Title Information
 						</td>
 						<td class="center">
-							<div class="spinner-border spinner-border-sm text-primary float-right" role="status">
-								<span class="sr-only">Loading...</span>
-							</div>
+							<img src="assets/icon-check 16x16.png" class="check" />
 						</td>
 					</tr>
 					<tr>
@@ -45,9 +46,7 @@
 							60+ Point Vehicle Check
 						</td>
 						<td class="center">
-							<div class="spinner-border spinner-border-sm text-primary float-right" role="status">
-								<span class="sr-only">Loading...</span>
-							</div>
+							<img src="assets/icon-check 16x16.png" class="check" />
 						</td>
 					</tr>
 					<tr>
@@ -55,9 +54,7 @@
 							Mileage Rollback
 						</td>
 						<td class="center">
-							<div class="spinner-border spinner-border-sm text-primary float-right" role="status">
-								<span class="sr-only">Loading...</span>
-							</div>
+							<img src="assets/icon-check 16x16.png" class="check" />
 						</td>
 					</tr>
 					<tr>
@@ -65,9 +62,7 @@
 							Junk & Salvage Records
 						</td>
 						<td class="center">
-							<div class="spinner-border spinner-border-sm text-primary float-right" role="status">
-								<span class="sr-only">Loading...</span>
-							</div>
+							<img src="assets/icon-check 16x16.png" class="check" />
 						</td>
 					</tr>
 					<tr>
@@ -75,9 +70,7 @@
 							Hidden Damage
 						</td>
 						<td class="center">
-							<div class="spinner-border spinner-border-sm text-primary float-right" role="status">
-								<span class="sr-only">Loading...</span>
-							</div>
+							<img src="assets/icon-check 16x16.png" class="check" />
 						</td>
 					</tr>
 					<tr>
@@ -85,12 +78,33 @@
 							Taxi, Lease, Police Use
 						</td>
 						<td class="center">
-							<div class="spinner-border spinner-border-sm text-primary float-right" role="status">
-								<span class="sr-only">Loading...</span>
-							</div>
+							<img src="assets/icon-check 16x16.png" class="check" />
 						</td>
 					</tr>
 				</table>
+			</div>
+			<div class="container-payment container">
+				<h1 class="container-title">Only $14.99</h1>
+				<h2 class="container-subtitle">Get your full vehicle history report</h2>
+				<form>
+					<div class="form-group">
+						<input placeholder="First Name on Card" class="form-control" />
+						<input placeholder="Last Name on Card" class="form-control" />
+						<input placeholder="Card Number" class="form-control" />
+						<div class="container-card-info">
+							<input placeholder="Exp MM" />
+							<input placeholder="Exp YYYY" />
+							<input placeholder="CVC" />
+						</div>
+						<div class="accepted-cards">
+							<img src="assets/discover.png" alt="discover" />
+							<img src="assets/visa.png" alt="visa" />
+							<img src="assets/amex.png" alt="amex" />
+							<img src="assets/mater.png" alt="mastercard" />
+						</div>
+						<button class="">Next Step</button>
+					</div>
+				</form>
 			</div>
 		</div>
 	</body>
