using separate divs

--- a/payment.html
+++ b/payment.html
@@ -83,26 +83,26 @@
 					</tr>
 				</table>
 			</div>
-			<div class="container-payment container">
-				<h1 class="container-title">Only $14.99</h1>
-				<h2 class="container-subtitle">Get your full vehicle history report</h2>
+			<div class="container-payment">
+				<h1 class="container-payment-title">Only $14.99</h1>
+				<h2 class="container-payment-subtitle">Get your full vehicle history report</h2>
 				<form>
-					<div class="form-group">
+					<div class="form-group payment-form">
 						<input placeholder="First Name on Card" class="form-control" />
 						<input placeholder="Last Name on Card" class="form-control" />
 						<input placeholder="Card Number" class="form-control" />
 						<div class="container-card-info">
-							<input placeholder="Exp MM" />
-							<input placeholder="Exp YYYY" />
-							<input placeholder="CVC" />
+							<input class="form-control" placeholder="Exp MM" />
+							<input class="form-control middle-card" placeholder="Exp YYYY" />
+							<input class="form-control" placeholder="CVC" />
 						</div>
 						<div class="accepted-cards">
-							<img src="assets/discover.png" alt="discover" />
-							<img src="assets/visa.png" alt="visa" />
-							<img src="assets/amex.png" alt="amex" />
-							<img src="assets/mater.png" alt="mastercard" />
+							<img src="assets/discover.png" alt="discover" class="accepted-card" />
+							<img src="assets/visa.png" class="accepted-card" alt="visa" />
+							<img src="assets/amex.png" class="accepted-card" alt="amex" />
+							<img src="assets/mater.png" class="accepted-card" alt="mastercard" />
 						</div>
-						<button class="">Next Step</button>
+						<button class="btn btn-primary btn-lg">Next Step</button>
 					</div>
 				</form>
 			</div>
