changed class style to avoid bootstrap conflict

--- a/payment.html
+++ b/payment.html
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<div class="outer">
-			<div class="container">
+			<div class="container-records">
 				<h1 class="container-title">72 Historical Records</h1>
 				<h2 class="container-subtitle">2007 Ford F250 Super Duty King Ranch / Lariat / XL / XLT</h2>
 				<div class="container-info">
